--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "order-ez-fe",
-  "version": "2.0.0",
+  "name": "example",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
