--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest dist --mode production ./src/main.js",
-    "test:unit": "vue-cli-service test:unit --require tests/unit/setup.js",
-    "test:e2e": "vue-cli-service test:e2e",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
